fix(security): global/config/SecurityConfig
- /oauth2/token, Swagger UI 관련 경로 등은 공개 접근을 허용(permitAll)
- /internal/** 경로는 ADMIN 역할을 가진 사용자만 접근하도록 제한